--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-list">
-            <li><a href="#">Incio</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="#">Projetos</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Sobre mim</a></li>
