--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Brito</title>
 </head>
+
 <body>
     <header>
         <nav>
-        <a class="logo" href="#">Gabriel Brito</a>
-        <div class="mobile-menu">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        <ul class="nav-list">
-            <li><a href="#">Incio</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Curriculum</a></li>
-            <li><a href="#">Sobre mim</a></li>
-        </ul>
+            <a class="logo" href="#">Gabriel Brito</a>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <ul class="nav-list">
+                <li><a href="#">Incio</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Sobre mim</a></li>
+            </ul>
         </nav>
     </header>
     <main>
- 
+        <div id="conteudo">
+            <div id=avatarhome>
+                <img src="img/avatarini.png">
+                <h1>HELLO WORLD!</h1>
+                <h2>BEM VINDO AO MEU PROJETO DE SITE</h2>
+            </div>
+        </div>
     </main>
+    <script src="functions.js"></script>
     <script src="mobile-navbar.js"></script>
+    <footer id="footer">
+        <div id="selo">
+            <img src="img/selo.png" >
+        </div>
+    </footer>
 </body>
+
 </html>
